--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,13 +8,14 @@ android {
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 8
-        versionName "1.2.1"
+        versionName "1.2.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
 
         jackOptions {
             enabled true
         }
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -23,8 +24,8 @@ android {
         }
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -33,21 +34,23 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:design:25.1.1'
-    testCompile 'junit:junit:4.12'
 
+//    compile 'com.google.firebase:firebase-ads:10.2.6'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.itextpdf:itextg:5.5.10'
     compile 'ir.sohreco.androidfilechooser:android-file-chooser:1.1.0'
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.jrummyapps:colorpicker:2.0.5'
-
     compile 'com.morsebyte.shailesh.twostagerating:TwoStageRate:2.0'
     compile 'honuapps:aloha:0.9.0'
 
+    compile 'com.google.firebase:firebase-core:11.0.1'
+    compile 'com.google.firebase:firebase-ads:11.0.1'
+    testCompile 'junit:junit:4.12'
 
-    compile 'com.google.firebase:firebase-ads:10.2.0'
+    compile 'com.android.support:multidex:1.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
