--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.pashkobohdan.fastreadinglite"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 10
-        versionName "1.2.3"
+        versionCode 11
+        versionName "1.2.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
 
@@ -48,6 +48,10 @@ dependencies {
 
     compile 'com.google.firebase:firebase-core:11.0.1'
     compile 'com.google.firebase:firebase-ads:11.0.1'
+    compile 'com.google.firebase:firebase-database:11.0.1'
+    compile 'com.google.firebase:firebase-auth:11.0.1'
+    compile 'com.google.android.gms:play-services-auth:11.0.1'
+
     testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:multidex:1.0.0'
